--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "components/ShopifyBuyButton.jsx"  ],
   "exclude": [
     "node_modules"
   ],
