--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "html-react-parser": "^3.0.4",
     "next": "^12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-tabs": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
