--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -14,6 +15,7 @@
     "@next/mdx": "^12.3.1",
     "html-react-parser": "^3.0.4",
     "next": "^12.3.0",
+    "next-sitemap": "^3.1.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-tabs": "^5.1.0"
