--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@mdx-js/loader": "^2.1.3",
     "@mdx-js/react": "^2.1.3",
     "@next/mdx": "^12.3.1",
+    "axios": "^1.1.3",
     "html-react-parser": "^3.0.4",
     "next": "^12.3.0",
     "next-sitemap": "^3.1.24",
+    "platform-detect": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-tabs": "^5.1.0"
