--- a/package.json
+++ b/package.json
@@ -16,21 +16,15 @@
     "@pioneer-platform/pioneer-client": "8.1.29",
     "@tanstack/react-table": "^8.7.0",
     "axios": "^1.1.3",
-    "framer-motion": "^7.6.15",
-    "fs": "^0.0.1-security",
     "html-react-parser": "^3.0.4",
-    "lodash": "^4.17.21",
-    "net": "^1.0.2",
     "next": "^12.3.0",
     "next-sitemap": "^3.1.24",
     "platform-detect": "^3.0.1",
-    "primereact": "^8.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-table": "^7.8.0",
     "react-tabs": "^5.1.0",
-    "styled-components": "^5.3.6",
-    "tls": "^0.0.1"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
