--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@next/mdx": "^12.3.1",
     "axios": "^1.1.3",
     "html-react-parser": "^3.0.4",
+    "import": "^0.0.6",
     "next": "^12.3.0",
     "next-sitemap": "^3.1.24",
+    "nextjs-google-analytics": "^2.2.2",
     "platform-detect": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-gtm-module": "^2.0.11",
     "react-tabs": "^5.1.0"
   },
   "devDependencies": {
