coin support rea

--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "next-sitemap": "^3.1.24",
     "platform-detect": "^3.0.1",
     "react": "18.2.0",
+    "react-columns": "^1.2.1",
     "react-dom": "18.2.0",
     "react-table": "^7.8.0",
-    "react-tabs": "^5.1.0",
+    "react-tabs": "^6.0.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
