--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.4.6",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@mdx-js/loader": "^2.1.3",
     "@mdx-js/react": "^2.1.3",
     "@next/mdx": "^12.3.1",
     "@pioneer-platform/pioneer-client": "8.1.29",
     "@tanstack/react-table": "^8.7.0",
     "axios": "^1.1.3",
+    "framer-motion": "^6",
     "html-react-parser": "^3.0.4",
     "import": "^0.0.6",
     "next": "^12.3.0",
