--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.4.6",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
+    "@chakra-ui/react": "^2.4.9",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@mdx-js/loader": "^2.1.3",
     "@mdx-js/react": "^2.1.3",
     "@next/mdx": "^12.3.1",
     "@pioneer-platform/pioneer-client": "8.1.29",
     "@tanstack/react-table": "^8.7.0",
     "axios": "^1.1.3",
-    "framer-motion": "^6",
+    "framer-motion": "^6.5.1",
     "html-react-parser": "^3.0.4",
     "import": "^0.0.6",
     "next": "^12.3.0",
@@ -32,6 +32,7 @@
     "react-gtm-module": "^2.0.11",
     "react-table": "^7.8.0",
     "react-tabs": "^6.0.0",
+    "react-use-color-mode": "^1.3.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
