--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@pioneer-platform/pioneer-client": "8.1.29",
     "@tanstack/react-table": "^8.7.0",
     "axios": "^1.1.3",
+    "example-export-component": "^1.0.0",
     "framer-motion": "^6",
     "html-react-parser": "^3.0.4",
     "import": "^0.0.6",
@@ -28,7 +29,9 @@
     "next-sitemap": "^3.1.24",
     "nextjs-google-analytics": "^2.2.2",
     "platform-detect": "^3.0.1",
+    "popup-chat-react": "^1.0.5",
     "react": "18.2.0",
+    "react-chat-popup": "^1.1.2",
     "react-columns": "^1.2.1",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
