--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "platform-detect": "^3.0.1",
     "popup-chat-react": "^1.0.5",
     "react": "18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-chat-popup": "^1.1.2",
     "react-columns": "^1.2.1",
     "react-dom": "18.2.0",
